// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Tooltip
  overlay={
    <div
      className="small nowrap"
    >
      <div />
    </div>
  }
>
  <div
    aria-label="
        shortcuts.on_page.intro
        
        
        
        
      "
    className="page-shortcuts-tooltip note text-center display-inline-block"
  >
    <div>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        ↑
      </span>
    </div>
    <div>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        ←
      </span>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        ↓
      </span>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        →
      </span>
    </div>
  </div>
</Tooltip>
`;

exports[`should render correctly: only left label 1`] = `
<Tooltip
  overlay={
    <div
      className="small nowrap"
    >
      <div>
        <span
          className=""
        >
          <span
            className="shortcut-button spacer-right"
          >
            ←
          </span>
          baz
        </span>
      </div>
    </div>
  }
>
  <div
    aria-label="
        shortcuts.on_page.intro
        
        
        shortcuts.on_page.left_x.baz
        
      "
    className="page-shortcuts-tooltip note text-center display-inline-block"
  >
    <div>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        ↑
      </span>
    </div>
    <div>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        ←
      </span>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        ↓
      </span>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        →
      </span>
    </div>
  </div>
</Tooltip>
`;

exports[`should render correctly: with meta label 1`] = `
<Tooltip
  overlay={
    <div
      className="small nowrap"
    >
      <div />
      <div
        className="big-spacer-top big-padded-top bordered-top"
      >
        <span
          className="shortcut-button little-spacer-right"
        >
          alt
        </span>
        <span
          className="little-spacer-right"
        >
          +
        </span>
        <span
          className="shortcut-button little-spacer-right"
        >
          ↑
        </span>
        <span
          className="shortcut-button spacer-right"
        >
          ↓
        </span>
        <span
          className="shortcut-button little-spacer-right"
        >
          ←
        </span>
        <span
          className="shortcut-button spacer-right"
        >
          →
        </span>
        funky
      </div>
    </div>
  }
>
  <div
    aria-label="
        shortcuts.on_page.intro
        
        
        
        shortcuts.on_page.meta_x.funky
      "
    className="page-shortcuts-tooltip note text-center display-inline-block"
  >
    <div>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        ↑
      </span>
    </div>
    <div>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        ←
      </span>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        ↓
      </span>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        →
      </span>
    </div>
  </div>
</Tooltip>
`;

exports[`should render correctly: with up/down and left/right labels 1`] = `
<Tooltip
  overlay={
    <div
      className="small nowrap"
    >
      <div>
        <span>
          <span
            className="shortcut-button little-spacer-right"
          >
            ↑
          </span>
          <span
            className="shortcut-button spacer-right"
          >
            ↓
          </span>
          foo
        </span>
        <span
          className="big-spacer-left"
        >
          <span
            className="shortcut-button little-spacer-right"
          >
            ←
          </span>
          <span
            className="shortcut-button spacer-right"
          >
            →
          </span>
          bar
        </span>
      </div>
    </div>
  }
>
  <div
    aria-label="
        shortcuts.on_page.intro
        shortcuts.on_page.up_down_x.foo
        shortcuts.on_page.left_right_x.bar
        
        
      "
    className="page-shortcuts-tooltip note text-center display-inline-block"
  >
    <div>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        ↑
      </span>
    </div>
    <div>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        ←
      </span>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        ↓
      </span>
      <span
        className="shortcut-button shortcut-button-tiny"
      >
        →
      </span>
    </div>
  </div>
</Tooltip>
`;
